--- a/App_GlobalResources/JSConsts.de.resx
+++ b/App_GlobalResources/JSConsts.de.resx
@@ -174,6 +174,9 @@
   <data name="SUCCESS" xml:space="preserve">
     <value>Erfolgreich</value>
   </data>
+  <data name="TEXT_ACCOUNT" xml:space="preserve">
+    <value>{DE}Account</value>
+  </data>
   <data name="TEXT_ACCOUNT_DETAILS" xml:space="preserve">
     <value>Details</value>
   </data>
