--- a/App_GlobalResources/JSConsts.es.resx
+++ b/App_GlobalResources/JSConsts.es.resx
@@ -174,6 +174,9 @@
   <data name="SUCCESS" xml:space="preserve">
     <value>Éxito</value>
   </data>
+  <data name="TEXT_ACCOUNT" xml:space="preserve">
+    <value>{ES}Account</value>
+  </data>
   <data name="TEXT_ACCOUNT_DETAILS" xml:space="preserve">
     <value>Detalles</value>
   </data>
