--- a/App_GlobalResources/JSConsts.fr.resx
+++ b/App_GlobalResources/JSConsts.fr.resx
@@ -174,6 +174,9 @@
   <data name="SUCCESS" xml:space="preserve">
     <value>Succès</value>
   </data>
+  <data name="TEXT_ACCOUNT" xml:space="preserve">
+    <value>{FR}Account</value>
+  </data>
   <data name="TEXT_ACCOUNT_DETAILS" xml:space="preserve">
     <value>Détails</value>
   </data>
