--- a/App_GlobalResources/JSConsts.it.resx
+++ b/App_GlobalResources/JSConsts.it.resx
@@ -174,6 +174,9 @@
   <data name="SUCCESS" xml:space="preserve">
     <value>Operazione riuscita</value>
   </data>
+  <data name="TEXT_ACCOUNT" xml:space="preserve">
+    <value>{IT}Account</value>
+  </data>
   <data name="TEXT_ACCOUNT_DETAILS" xml:space="preserve">
     <value>Dettagli</value>
   </data>
