--- a/App_GlobalResources/JSConsts.ja.resx
+++ b/App_GlobalResources/JSConsts.ja.resx
@@ -174,6 +174,9 @@
   <data name="SUCCESS" xml:space="preserve">
     <value>成功</value>
   </data>
+  <data name="TEXT_ACCOUNT" xml:space="preserve">
+    <value>{JA}Account</value>
+  </data>
   <data name="TEXT_ACCOUNT_DETAILS" xml:space="preserve">
     <value>内訳</value>
   </data>
