CORE-7813:Localization: Some items aren't localized. Localized Account menu item in horizontal menu

--- a/App_GlobalResources/MainMenu.en-GB.resx
+++ b/App_GlobalResources/MainMenu.en-GB.resx
@@ -629,5 +629,8 @@
   </data>
   <data name="TEXT_QUOTING" xml:space="preserve">
     <value>Manage Quotes</value>
-  </data>   
+  </data>
+  <data name="TEXT_ACCOUNT" xml:space="preserve">
+    <value>Account</value>
+  </data>    
 </root>
