--- a/App_GlobalResources/MainMenu.fr.resx
+++ b/App_GlobalResources/MainMenu.fr.resx
@@ -675,4 +675,7 @@
   <data name="TEXT_PRODUCT_DASHBOARD" xml:space="preserve">
     <value>[FR]Product Dashboard</value>
   </data>
+  <data name="TEXT_SEARCH" xml:space="preserve">
+    <value>[FR]Search</value>
+  </data>
 </root>
