Fixes to merged MainMenu.en-GB.resx localization file so that text matches US English text of MainMenu.resx

--- a/App_GlobalResources/MainMenu.en-GB.resx
+++ b/App_GlobalResources/MainMenu.en-GB.resx
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <root>
     <!-- 
     Microsoft ResX Schema 
@@ -141,8 +141,8 @@
     <data name="TEXT_ADD_ACCOUNT_WEBSERVICE" xml:space="preserve">
         <value>Add Account with Web Service</value>
     </data>
-    <data name="TEXT_ADD_CHILD_ACCOUNT" xml:space="preserve">
-        <value>[en-GB]Add child Account</value>
+	<data name="TEXT_ADD_CHILD_ACCOUNT" xml:space="preserve">
+        <value>Add child Account</value>
     </data>
     <data name="TEXT_ADD_CSR" xml:space="preserve">
         <value>Add CSR</value>
@@ -225,8 +225,8 @@
     <data name="TEXT_BE_ORDERS" xml:space="preserve">
         <value>Orders</value>
     </data>
-    <data name="TEXT_BILL_MANAGEES" xml:space="preserve">
-        <value>Bill Managees</value>
+	<data name="TEXT_BILL_MANAGEES" xml:space="preserve">
+        <value>Managed Online Bills</value>
     </data>
     <data name="TEXT_BILL_MANAGER" xml:space="preserve">
         <value>Bill Managers</value>
@@ -234,8 +234,8 @@
     <data name="TEXT_BILLABLE_INTERVALS" xml:space="preserve">
         <value>Billable Intervals</value>
     </data>
-    <data name="TEXT_BILLING_MANAGEMENT" xml:space="preserve">
-        <value>Billing Management</value>
+	<data name="TEXT_BILLING_MANAGEMENT" xml:space="preserve">
+        <value>Billing</value>
     </data>
     <data name="TEXT_BULK_ADJUST_TRANSACTIONS" xml:space="preserve">
         <value>Bulk Adjust Transactions</value>
@@ -318,14 +318,14 @@
     <data name="TEXT_FAILED_TRANSACTIONS_SUMMARY_ACCOUNT_INTERVAL_MENU" xml:space="preserve">
         <value>Summary By Account</value>
     </data>
-    <data name="TEXT_FAILED_TRANSACTIONS_SUMMARY_INTERVAL_TYPE_MENU" xml:space="preserve">
-        <value>Summary By Account</value>
+	<data name="TEXT_FAILED_TRANSACTIONS_SUMMARY_INTERVAL_TYPE_MENU" xml:space="preserve">
+        <value>Summary By Interval Type</value>
     </data>
     <data name="TEXT_FAILED_TRANSACTIONS_SUMMARY_STAGE_PLUGIN" xml:space="preserve">
         <value>Failed Transaction Summary By Stage and Plugin</value>
     </data>
-    <data name="TEXT_FAILED_TRANSACTIONS_SUMMARY_STAGE_PLUGIN_MENU" xml:space="preserve">
-        <value>Summary By Account and Error Type</value>
+	<data name="TEXT_FAILED_TRANSACTIONS_SUMMARY_STAGE_PLUGIN_MENU" xml:space="preserve">
+        <value>Summary By Stage and Plugin</value>
     </data>
     <data name="TEXT_FEEDS" xml:space="preserve">
         <value>Feeds</value>
@@ -390,8 +390,8 @@
     <data name="TEXT_MANAGE_DEFAULT_SECURITY" xml:space="preserve">
         <value>Default Security</value>
     </data>
-    <data name="TEXT_MANAGE_MISC_ADJUSTMENTS" xml:space="preserve">
-        <value>Manage Misc. Adjustments</value>
+	<data name="TEXT_MANAGE_MISC_ADJUSTMENTS" xml:space="preserve">
+        <value>Misc. Adjustments</value>
     </data>
     <data name="TEXT_MANAGE_NON_STANDARD_CHARGES" xml:space="preserve">
         <value>Manage Nonstandard Charges</value>
@@ -402,8 +402,8 @@
     <data name="TEXT_MANAGE_REPORTS" xml:space="preserve">
         <value>Manage Reports</value>
     </data>
-    <data name="TEXT_MANAGE_ROLES" xml:space="preserve">
-        <value>Manage Roles</value>
+	<data name="TEXT_MANAGE_ROLES" xml:space="preserve">
+        <value>User Roles</value>
     </data>
     <data name="TEXT_MANAGE_SECURITY" xml:space="preserve">
         <value>Manage Security</value>
@@ -468,8 +468,8 @@
     <data name="TEXT_PAY_FOR_ACCOUNTS" xml:space="preserve">
         <value>Pay for Accounts</value>
     </data>
-    <data name="TEXT_PAY_FOR_ME" xml:space="preserve">
-        <value>Edit Payers</value>
+	<data name="TEXT_PAY_FOR_ME" xml:space="preserve">
+        <value>Payers</value>
     </data>
     <data name="TEXT_PAYMENT_HISTORY" xml:space="preserve">
         <value>Payment History</value>
@@ -630,8 +630,8 @@
     <data name="TEXT_USM" xml:space="preserve">
         <value>Usage Server Maintenance</value>
     </data>
-    <data name="TEXT_USM_CONFIG" xml:space="preserve">
-        <value>USM Configuration</value>
+	<data name="TEXT_USM_CONFIG" xml:space="preserve">
+        <value>Usage Server</value>
     </data>
     <data name="TEXT_VERSION_INFO" xml:space="preserve">
         <value>Version Information</value>
@@ -645,4 +645,37 @@
     <data name="TEXT_VIEWONLINE_BILL" xml:space="preserve">
         <value>View Online Bill</value>
     </data>
+	<data name="TEXT_CREATE_QUOTE" xml:space="preserve">
+		<value>Create Quote</value>
+	</data>
+	<data name="TEXT_USAGE_AUDIT" xml:space="preserve">
+		<value>Usage Audit</value>
+	</data>
+	<data name="TEXT_ADD_TENANT" xml:space="preserve">
+		<value>Add Partition</value>
+	</data>
+	<data name="TEXT_REPORTS" xml:space="preserve">
+		<value>Reports</value>
+	</data>
+	<data name="TEXT_USAGE_PROCESSING" xml:space="preserve">
+		<value>Usage Processing</value>
+	</data>
+	<data name="TEXT_ACCOUNT" xml:space="preserve">
+		<value>Account</value>
+	</data>
+	<data name="TEXT_BILL_MESSAGES" xml:space="preserve">
+		<value>Bill Messages</value>
+	</data>
+	<data name="TEXT_FINANCE_DASHBOARD" xml:space="preserve">
+		<value>Finance Dashboard</value>
+	</data>
+	<data name="TEXT_MANAGE_BILL_MESSAGES" xml:space="preserve">
+		<value>Manage Bill Messages</value>
+	</data>
+	<data name="TEXT_OPERATIONS_DASHBOARD" xml:space="preserve">
+		<value>Operations Dashboard</value>
+	</data>
+	<data name="TEXT_PRODUCT_DASHBOARD" xml:space="preserve">
+		<value>Product Dashboard</value>
+	</data>
 </root>
