--- a/App_GlobalResources/MainMenu.de.resx
+++ b/App_GlobalResources/MainMenu.de.resx
@@ -632,5 +632,14 @@
   </data>
   <data name="TEXT_ACCOUNT" xml:space="preserve">
     <value>{DE}Account</value>
-  </data>    
+  </data>
+  <data name="TEXT_CREATE_QUOTE" xml:space="preserve">
+    <value>{DE}Create Quote</value>
+  </data>
+  <data name="TEXT_QUOTING_LIST" xml:space="preserve">
+    <value>{DE}View All Quotes</value>
+  </data>
+  <data name="TEXT_SHARED_PROPERTIES" xml:space="preserve">
+    <value>{DE}Shared Properties</value>
+  </data>  
 </root>
