--- a/App_GlobalResources/MainMenu.en-GB.resx
+++ b/App_GlobalResources/MainMenu.en-GB.resx
@@ -678,4 +678,13 @@
 	<data name="TEXT_PRODUCT_DASHBOARD" xml:space="preserve">
 		<value>Product Dashboard</value>
 	</data>
+	<data name="TEXT_CREATE_QUOTE" xml:space="preserve">
+        <value>Create Quote</value>
+    </data> 
+    <data name="TEXT_QUOTING_LIST" xml:space="preserve">
+        <value>View All Quotes</value>
+    </data>
+    <data name="TEXT_SHARED_PROPERTIES" xml:space="preserve">
+        <value>Shared Properties</value>
+    </data> 
 </root>
