--- a/App_GlobalResources/MainMenu.it.resx
+++ b/App_GlobalResources/MainMenu.it.resx
@@ -632,5 +632,14 @@
   </data>
   <data name="TEXT_ACCOUNT" xml:space="preserve">
     <value>{IT}Account</value>
+  </data>
+  <data name="TEXT_CREATE_QUOTE" xml:space="preserve">
+    <value>{IT}Create Quote</value>
   </data>  
+  <data name="TEXT_QUOTING_LIST" xml:space="preserve">
+    <value>{IT}View All Quotes</value>
+  </data>
+  <data name="TEXT_SHARED_PROPERTIES" xml:space="preserve">
+    <value>{IT}Shared Properties</value>
+  </data>   
 </root>
