--- a/App_GlobalResources/MainMenu.ja.resx
+++ b/App_GlobalResources/MainMenu.ja.resx
@@ -626,5 +626,14 @@
   </data>
   <data name="TEXT_ACCOUNT" xml:space="preserve">
     <value>{JA}Account</value>
-  </data>    
+  </data>
+  <data name="TEXT_CREATE_QUOTE" xml:space="preserve">
+    <value>{JA}Create Quote</value>
+  </data> 
+  <data name="TEXT_QUOTING_LIST" xml:space="preserve">
+    <value>{JA}View All Quotes</value>
+  </data>
+  <data name="TEXT_SHARED_PROPERTIES" xml:space="preserve">
+    <value>{JA}Shared Properties</value>
+  </data>   
 </root>
