--- a/App_GlobalResources/MainMenu.pt-br.resx
+++ b/App_GlobalResources/MainMenu.pt-br.resx
@@ -595,7 +595,7 @@
     <value>Ver mudanças falharam</value>
   </data>
   <data name="TEXT_SHARED_PROPERTIES" xml:space="preserve">
-    <value>Shared Properties</value>
+    <value>{PT-BR}Shared Properties</value>
   </data>
   <data name="TEXT_PAYMENT_TRANSACTIONS" xml:space="preserve">
     <value>Payment Transactions</value>
@@ -638,5 +638,11 @@
   </data>
   <data name="TEXT_ACCOUNT" xml:space="preserve">
     <value>{PT-BR}Account</value>
+  </data>
+  <data name="TEXT_CREATE_QUOTE" xml:space="preserve">
+    <value>{PT-BR}Create Quote</value>
+  </data> 
+  <data name="TEXT_QUOTING_LIST" xml:space="preserve">
+    <value>{PT-BR}View All Quotes</value>
   </data>    
 </root>
