CORE-7813:Localization: Some items aren't localized. Added missing localization in Configure Filters window

--- a/App_GlobalResources/JSConsts.de.resx
+++ b/App_GlobalResources/JSConsts.de.resx
@@ -1287,4 +1287,7 @@
   <data name="REPORTS_TREE_NOT_APPLICABLE_TEXT" xml:space="preserve">
     <value>(GERMAN) N/A</value>
   </data>
+  <data name="TEXT_ACCOUNT_TYPE" xml:space="preserve">
+    <value>{DE}Account Type</value>
+  </data>
 </root>
