--- a/App_GlobalResources/JSConsts.pt-br.resx
+++ b/App_GlobalResources/JSConsts.pt-br.resx
@@ -1281,4 +1281,7 @@
   <data name="REPORTS_TREE_NOT_APPLICABLE_TEXT" xml:space="preserve">
     <value>(BRAZILIAN PORTUGUESE) N/A</value>
   </data>
+  <data name="TEXT_ACCOUNT_TYPE" xml:space="preserve">
+    <value>{PT-BR}Account Type</value>
+  </data>
 </root>
