--- a/Sites/MetraView/App_GlobalResources/Resource.es-MX.resx
+++ b/Sites/MetraView/App_GlobalResources/Resource.es-MX.resx
@@ -462,4 +462,22 @@
   <data name="TEXT_DOWNLOAD_CREDIT_NOTES" xml:space="preserve">
     <value>(Mexican Spanish) Download Credit Notes</value>
   </data>
+   <data name="TEXT_PRODUCT_VIEW_MAPPINGS" xml:space="preserve">
+    <value>(ES-MX)Product View Mappings</value>
+  </data>
+  <data name="TEXT_BILL_SETTING" xml:space="preserve">
+    <value>(ES-MX)Bill Setting</value>
+  </data>
+  <data name="TEXT_DASHBOARDS" xml:space="preserve">
+    <value>(ES-MX)Dashboards</value>
+  </data>
+  <data name="TEXT_ENTRY_POINTS" xml:space="preserve">
+    <value>(ES-MX)Entry Points</value>
+  </data>
+  <data name="TEXT_REPORT_INVENTORIES" xml:space="preserve">
+    <value>(ES-MX)Report Inventories</value>
+  </data>
+  <data name="TEXT_SITE" xml:space="preserve">
+    <value>(ES-MX)Site</value>
+  </data>
 </root>
