--- a/Sites/MetraView/App_GlobalResources/Resource.pt-br.resx
+++ b/Sites/MetraView/App_GlobalResources/Resource.pt-br.resx
@@ -460,6 +460,24 @@
     <value>Sim</value>
   </data>
   <data name="TEXT_DOWNLOAD_CREDIT_NOTES" xml:space="preserve">
-    <value>(Brazilian Portuguese) Download Credit Notes</value>
+    <value>(PT-BR) Download Credit Notes</value>
+  </data>
+  <data name="TEXT_PRODUCT_VIEW_MAPPINGS" xml:space="preserve">
+    <value>(PT-BR)Product View Mappings</value>
+  </data>
+  <data name="TEXT_BILL_SETTING" xml:space="preserve">
+    <value>(PT-BR)Bill Setting</value>
+  </data>
+  <data name="TEXT_DASHBOARDS" xml:space="preserve">
+    <value>(PT-BR)Dashboards</value>
+  </data>
+  <data name="TEXT_ENTRY_POINTS" xml:space="preserve">
+    <value>(PT-BR)Entry Points</value>
+  </data>
+  <data name="TEXT_REPORT_INVENTORIES" xml:space="preserve">
+    <value>(PT-BR)Report Inventories</value>
+  </data>
+  <data name="TEXT_SITE" xml:space="preserve">
+    <value>(PT-BR)Site</value>
   </data>
 </root>
