CORE-5860: Localized Header for "Member Name" column

--- a/ApprovalFrameworkManagement/ChangeTypeViewers/App_LocalResources/ViewGroupSubscriptionMemberUpdateDetails.aspx.es-mx.resx
+++ b/ApprovalFrameworkManagement/ChangeTypeViewers/App_LocalResources/ViewGroupSubscriptionMemberUpdateDetails.aspx.es-mx.resx
@@ -147,4 +147,7 @@
     <data name="TEXT_APPROVALS_CHANGEDETAILS_UPDATEDVALUE" xml:space="preserve">
         <value>Nuevo valor</value>
     </data>
+  <data name="TEXT_APPROVAL_GROUPSUBSCRIPTIONCHANGEDETAILS_ACCOUNTNAME" xml:space="preserve">
+    <value>[es-MX] Member Name</value>
+  </data>     
 </root>
