--- a/ApprovalFrameworkManagement/ChangeTypeViewers/App_LocalResources/ViewGroupSubscriptionMemberUpdateDetails.aspx.pt-BR.resx
+++ b/ApprovalFrameworkManagement/ChangeTypeViewers/App_LocalResources/ViewGroupSubscriptionMemberUpdateDetails.aspx.pt-BR.resx
@@ -147,4 +147,7 @@
   <data name="TEXT_APPROVAL_GROUP_SUBSCRIPTION_CHANGE_DETAILS" xml:space="preserve">
     <value>Membros da assinatura em grupo atualizados</value>
   </data>
+  <data name="TEXT_APPROVAL_GROUPSUBSCRIPTIONCHANGEDETAILS_ACCOUNTNAME" xml:space="preserve">
+    <value>[pt-BR] Member Name</value>
+  </data>   
 </root>
