CORE-7923 [Partitions] Validation needs to be added for PO name to avoid duplicate POs with the same name. Reviewer RPuzikov

--- a/App_GlobalResources/ErrorMessages.fr.resx
+++ b/App_GlobalResources/ErrorMessages.fr.resx
@@ -304,6 +304,6 @@
     <value>[FR]Unable open and save report</value>
   </data>
   <data name="ERROR_PO_EXISTS" xml:space="preserve">
-    <value>[FR]PO with the same name already exists</value>
+    <value>[FR]Name of product offering must be unique</value>
   </data>
 </root>
