--- a/App_GlobalResources/ErrorMessages.resx
+++ b/App_GlobalResources/ErrorMessages.resx
@@ -304,6 +304,6 @@
     <value>Unable open and save report</value>
   </data>
   <data name="ERROR_PO_EXISTS" xml:space="preserve">
-    <value>PO with the same name already exists</value>
+    <value>Name of product offering must be unique</value>
   </data>
 </root>
