CORE-7710 Create Master PO screen shouldn't have ability to edit PartitionId and have proper title 1) PartitionId control was hidden on Create Master PO screen 2) Page title on Master Product Offerings list was localized 3) Page title on Create Master Product Offering page was localized Reviewer YZapara

--- a/MetraOffer/ProductOfferings/App_LocalResources/CreateProductOffering.aspx.de.resx
+++ b/MetraOffer/ProductOfferings/App_LocalResources/CreateProductOffering.aspx.de.resx
@@ -132,6 +132,9 @@
   <data name="TEXT_EFFECTIVE_START_DATE" xml:space="preserve">
     <value>Effective Start Date</value>
   </data>
+  <data name="TEXT_MASTER" xml:space="preserve">
+    <value>Create Master Product Offering</value>
+  </data>
   <data name="TEXT_NAME" xml:space="preserve">
     <value>Name</value>
   </data>
