--- a/MetraOffer/ProductOfferings/App_LocalResources/ProductOfferingsList.aspx.fr.resx
+++ b/MetraOffer/ProductOfferings/App_LocalResources/ProductOfferingsList.aspx.fr.resx
@@ -192,4 +192,7 @@
   <data name="TEXT_ViewPO" xml:space="preserve">
     <value>[FR]View Product Offering</value>
   </data>
+  <data name="TEXT_MASTER" xml:space="preserve">
+    <value>[FR]Master Product Offerings</value>
+  </data>
 </root>
