--- a/MetraOffer/ProductOfferings/App_LocalResources/ProductOfferingsList.aspx.it.resx
+++ b/MetraOffer/ProductOfferings/App_LocalResources/ProductOfferingsList.aspx.it.resx
@@ -192,4 +192,7 @@
   <data name="TEXT_ViewPO" xml:space="preserve">
     <value>View Product Offering</value>
   </data>
+  <data name="TEXT_MASTER" xml:space="preserve">
+    <value>Master Product Offerings</value>
+  </data>
 </root>
