--- a/App_GlobalResources/JSConsts.ja.resx
+++ b/App_GlobalResources/JSConsts.ja.resx
@@ -1242,7 +1242,7 @@
   <data name="TEXT_SELECT_PO_ERROR" xml:space="preserve">
     <value />
   </data>
-    <data name="TEXT_CONVERT" xml:space="preserve">
+  <data name="TEXT_CONVERT" xml:space="preserve">
     <value>Convert</value>
   </data>
   <data name="TEXT_CONVERT_MESSAGE" xml:space="preserve">
@@ -1295,5 +1295,8 @@
   </data>
   <data name="TEXT_ACCOUNT_TYPE" xml:space="preserve">
     <value>{JA}Account Type</value>
+  </data>
+  <data name="TEXT_AMPWIZARD_INVALID_UQG_NAME" xml:space="preserve">
+    <value>[JP] The value in this field is invalid. Valid Usage Qualification names can only consist of alphanumeric characters (Aa-Zz, 0-9) and the underscore '_' character.</value>
   </data>
 </root>
