--- a/App_GlobalResources/JSConsts.pt-br.resx
+++ b/App_GlobalResources/JSConsts.pt-br.resx
@@ -1284,4 +1284,7 @@
   <data name="TEXT_ACCOUNT_TYPE" xml:space="preserve">
     <value>{PT-BR}Account Type</value>
   </data>
+  <data name="TEXT_AMPWIZARD_INVALID_UQG_NAME" xml:space="preserve">
+    <value>[PT-BR] The value in this field is invalid. Valid Usage Qualification names can only consist of alphanumeric characters (Aa-Zz, 0-9) and the underscore '_' character.</value>
+  </data>
 </root>
