--- a/Sites/MetraView/App_GlobalResources/SiteJSConsts.pt-br.resx
+++ b/Sites/MetraView/App_GlobalResources/SiteJSConsts.pt-br.resx
@@ -673,27 +673,27 @@
     <value />
   </data>
   <data name="TEXT_PASSWORD_VALIDATION_MESSAGE" xml:space="preserve">
-    <value>{PT_BR} Passwords do not match.</value>
+    <value>[pt-BR] Passwords do not match.</value>
   </data>  
   <data name="TEXT_PHONE_VALIDATION_MESSAGE" xml:space="preserve">
-    <value>{PT_BR} Enter a valid phone number. Format: 555-555-5555</value>
+    <value>[pt-BR] Enter a valid phone number. Format: 555-555-5555</value>
   </data>    
   <data name="TEXT_CREDITCARD_VALIDATION_MESSAGE" xml:space="preserve">
-    <value>{PT_BR} Credit card format is invalid</value>
+    <value>[pt-BR] Credit card format is invalid</value>
   </data>      
   <data name="TEXT_CREDITCARD_VERIFICATIONNO_VALIDATION_MESSAGE" xml:space="preserve">
-    <value>{PT_BR} CV Number is invalid</value>
+    <value>[pt-BR] CV Number is invalid</value>
   </data>        
   <data name="TEXT_SSN_VALIDATION_MESSAGE" xml:space="preserve">
-    <value>{PT_BR} SSN format: xxx-xx-xxxx</value>
+    <value>[pt-BR] SSN format: xxx-xx-xxxx</value>
   </data>          
   <data name="TEXT_ACCOUNTNO_VALIDATION_MESSAGE" xml:space="preserve">
-    <value>{PT_BR} Only numeric digits are allowed</value>
+    <value>[pt-BR] Only numeric digits are allowed</value>
   </data>            
   <data name="TEXT_ZIPCODE_VALIDATION_MESSAGE" xml:space="preserve">
-    <value>{PT_BR} Zipcode is invalid</value>
+    <value>[pt-BR] Zipcode is invalid</value>
   </data>              
   <data name="TEXT_MIDDLEINITIAL_VALIDATION_MESSAGE" xml:space="preserve">
-    <value>{PT_BR} Middle initial is invalid</value>
+    <value>[pt-BR] Middle initial is invalid</value>
   </data>    
 </root>
