- Resources files was synchronized with their default (en-US) version - Missing resources files was added - Replacing old language prefixes in untranslated values Reviewer RPuzikov

--- a/config/Localization/metratech.com/metratech.com_accountcreation_pt-br.xml
+++ b/config/Localization/metratech.com/metratech.com_accountcreation_pt-br.xml
@@ -228,7 +228,7 @@
         </locale_entry>
         <locale_entry>
             <Name>metratech.com/accountcreation/InvoiceMethod/StandardWithBillMessages</Name>
-            <Value>{BT-BR} Standard With Bill Messages</Value>
+            <Value>[pt-BR] Standard With Bill Messages</Value>
         </locale_entry>
         <locale_entry>
             <Name>metratech.com/accountcreation/Language</Name>
