--- a/config/Localization/metratech.com/metratech.com_accountcreation_de.xml
+++ b/config/Localization/metratech.com/metratech.com_accountcreation_de.xml
@@ -228,7 +228,7 @@
         </locale_entry>
         <locale_entry>
             <Name>metratech.com/accountcreation/InvoiceMethod/StandardWithBillMessages</Name>
-            <Value>{DE} Standard With Bill Messages</Value>
+            <Value>[DE] Standard With Bill Messages</Value>
         </locale_entry>
         <locale_entry>
             <Name>metratech.com/accountcreation/Language</Name>
