--- a/config/Localization/metratech.com/metratech.com_accountcreation_es-MX.xml
+++ b/config/Localization/metratech.com/metratech.com_accountcreation_es-MX.xml
@@ -228,7 +228,7 @@
         </locale_entry>
         <locale_entry>
             <Name>metratech.com/accountcreation/InvoiceMethod/StandardWithBillMessages</Name>
-            <Value>{ES_MX} Standard With Bill Messages</Value>
+            <Value>[ES-MX] Standard With Bill Messages</Value>
         </locale_entry>
         <locale_entry>
             <Name>metratech.com/accountcreation/Language</Name>
