--- a/config/Localization/metratech.com/metratech.com_accountcreation_it.xml
+++ b/config/Localization/metratech.com/metratech.com_accountcreation_it.xml
@@ -228,7 +228,7 @@
         </locale_entry>
         <locale_entry>
             <Name>metratech.com/accountcreation/InvoiceMethod/StandardWithBillMessages</Name>
-            <Value>{IT} Standard With Bill Messages</Value>
+            <Value>[IT] Standard With Bill Messages</Value>
         </locale_entry>
         <locale_entry>
             <Name>metratech.com/accountcreation/Language</Name>
