--- a/Sites/MetraView/App_GlobalResources/SiteJSConsts.de.resx
+++ b/Sites/MetraView/App_GlobalResources/SiteJSConsts.de.resx
@@ -118,22 +118,22 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <data name="ALT_FORMAT" xml:space="preserve">
-    <value>d/m/y</value>
+    <value>d.m.y</value>
   </data>
   <data name="DATE_FORMAT" xml:space="preserve">
-    <value>j/n/Y</value>
+    <value>j.n.Y</value>
   </data>
   <data name="DATE_LONG_FORMAT" xml:space="preserve">
-    <value>j/n/Y g:i:s</value>
+    <value>j.n.Y g:i:s</value>
   </data>
   <data name="DATE_TIME_FORMAT" xml:space="preserve">
-    <value>j/n/Y g:i:s | n/j/Y</value>
+    <value>j.n.Y g:i:s | n.j.Y</value>
   </data>
   <data name="DATE_TIME_RENDERER" xml:space="preserve">
     <value>j.n.Y g:i:s</value>
   </data>
   <data name="ERR_DATE_FORMAT" xml:space="preserve">
-    <value>dd/mm/YYYY</value>
+    <value>dd.mm.YYYY</value>
   </data>
   <data name="GRAPH_CURRENCY_FORMAT" xml:space="preserve">
     <value>$%.2f</value>
@@ -361,10 +361,10 @@
     <value>Bulk Update Search Results</value>
   </data>
   <data name="TEXT_ERROR_NOTHING_UPDATED_BULKUPDATE" xml:space="preserve">
-      <value>Nothing will be updated</value>
-    </data>
+    <value>Nothing will be updated</value>
+  </data>
   <data name="TEXT_NO_SELECTED_BME_FOR_BULKUPDATE" xml:space="preserve">
-      <value>There are no selected BMEs for bulk update</value>
+    <value>There are no selected BMEs for bulk update</value>
   </data>
   <data name="TEXT_ERROR_TOO_MANY_RECORDS_BULKUPDATE" xml:space="preserve">
     <value>Too many records to update</value>
@@ -520,7 +520,7 @@
     <value>Eigenschaften</value>
   </data>
   <data name="TEXT_PRORATED_RECURRING_CHARGE_CREDIT_MESSAGE" xml:space="preserve">
-    <value>Ihnen wurde dieses Guthaben gewährt, weil sich die angemeldete Nutzung mit im Voraus abgebuchter regelmäßiger Gebühr in diesem Rechnungszeitraum geändert hat.&lt;BR&gt;&lt;BR&gt;Auf der vorigen Rechnung wurde Ihnen ein Betrag von [RCAmount] im Voraus berechnet. Sie haben die Leistung nur vom [RCIntervalStart] bis zum [ProratedIntervalStartPreviousDay] in Anspruch genommen. Dieses Guthaben entspricht also der Differenz zwischen [ProratedIntervalStart] und [ProratedIntervalEnd]. Dies entspricht einem Zeitraum von [ProratedDays] Tagen.&lt;BR&gt;&lt;BR&gt;Die Berechnung des Guthabens erfolgte unter Zugrundelegung des Tagesbetrags von [ProratedDailyRate]. Der Tagesbetrag wurde berechnet, indem [RCAmount] durch die Anzahl der Tage im entsprechenden Zeitraum geteilt wurde. Der Zeitraum von [ProratedDays] Tagen wurde also mit [ProratedDailyRate] multipliziert, wodurch Ihnen ein Guthaben von [Amount] entstand.&lt;BR&gt;</value>
+    <value>Ihnen wurde dieses Guthaben gewährt, weil sich die angemeldete Nutzung mit im Voraus abgebuchter regelmäßiger Gebühr in diesem Rechnungszeitraum geändert hat.&lt;BR&gt;&lt;BR&gt;Auf der vorigen Rechnung wurde Ihnen ein Betrag von [RCAmount] im Voraus berechnet. Sie haben die Leistung nur vom [RCIntervalStart] bis zum [RCIntervalEnd] in Anspruch genommen. Dieses Guthaben entspricht also der Differenz zwischen [ProratedIntervalStart] und [ProratedIntervalEnd]. Dies entspricht einem Zeitraum von [ProratedDays] Tagen.&lt;BR&gt;&lt;BR&gt;Die Berechnung des Guthabens erfolgte unter Zugrundelegung des Tagesbetrags von [ProratedDailyRate]. Der Tagesbetrag wurde berechnet, indem [RCAmount] durch die Anzahl der Tage im entsprechenden Zeitraum geteilt wurde. Der Zeitraum von [ProratedDays] Tagen wurde also mit [ProratedDailyRate] multipliziert, wodurch Ihnen ein Guthaben von [Amount] entstand.&lt;BR&gt;</value>
   </data>
   <data name="TEXT_PRORATED_RECURRING_CHARGE_MESSAGE" xml:space="preserve">
     <value>Diese Gebühr wurde anteilig berechnet.  Die anteilige Berechnung verringert die Höhe der Gebühren, da Ihnen nur die Anzahl von Tage berechnet werden, an denen Sie in einem bestimmten Rechnungszeitraum für eine Leistung angemeldet waren.&lt;BR&gt;&lt;BR&gt;Die Berechnung für dieses Produkt begann am [ProratedIntervalStart] und endete am [ProratedIntervalEnd].  Sie haben die Leistung also für [ProratedDays] Tage erhalten.  Ihre Gebühren für diesen Zeitraum wurden berechnet, indem der Tagesbetrag von [ProratedDailyRate] mit [ProratedDays] Tagen angemeldeter Nutzung multipliziert wurde.  Dies entspricht [Amount].  (Der Tagesbetrag von [ProratedDailyRate] wird berechnet, indem die Gebühr für den entsprechenden Zeitraum von [RCAmount] durch die Anzahl der Tage im Zeitraum geteilt wird.)&lt;BR&gt;</value>
@@ -674,29 +674,26 @@
   </data>
   <data name="TEXT_PASSWORD_VALIDATION_MESSAGE" xml:space="preserve">
     <value>[DE] Passwords do not match.</value>
-  </data>  
+  </data>
   <data name="TEXT_PHONE_VALIDATION_MESSAGE" xml:space="preserve">
     <value>[DE] Enter a valid phone number. Format: 555-555-5555</value>
-  </data>    
+  </data>
   <data name="TEXT_CREDITCARD_VALIDATION_MESSAGE" xml:space="preserve">
     <value>[DE] Credit card format is invalid</value>
-  </data>      
+  </data>
   <data name="TEXT_CREDITCARD_VERIFICATIONNO_VALIDATION_MESSAGE" xml:space="preserve">
     <value>[DE] CV Number is invalid</value>
-  </data>        
+  </data>
   <data name="TEXT_SSN_VALIDATION_MESSAGE" xml:space="preserve">
     <value>[DE] SSN format: xxx-xx-xxxx</value>
-  </data>          
+  </data>
   <data name="TEXT_ACCOUNTNO_VALIDATION_MESSAGE" xml:space="preserve">
     <value>[DE] Only numeric digits are allowed</value>
-  </data>            
+  </data>
   <data name="TEXT_ZIPCODE_VALIDATION_MESSAGE" xml:space="preserve">
     <value>[DE] Zipcode is invalid</value>
-  </data>              
+  </data>
   <data name="TEXT_MIDDLEINITIAL_VALIDATION_MESSAGE" xml:space="preserve">
     <value>[DE] Middle initial is invalid</value>
-  </data>  
-  <data name="EXTJS_DATE_LONG_FORMAT" xml:space="preserve">
-    <value>d/m/Y H:i:s</value>
   </data>
 </root>
