--- a/Templates/App_LocalResources/TemplateSummary.aspx.en-GB.resx
+++ b/Templates/App_LocalResources/TemplateSummary.aspx.en-GB.resx
@@ -112,13 +112,13 @@
         <value>2.0</value>
     </resheader>
     <resheader name="reader">
-        <value>System.Resources.ResXResourceReader, System.Windows.Forms, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+        <value>System.Resources.ResXResourceReader, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
     </resheader>
     <resheader name="writer">
-        <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+        <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
     </resheader>
     <data name="ACCOUNT_TYPE" xml:space="preserve">
-        <value></value>
+        <value>Account Type</value>
     </data>
     <data name="ACTIONS" xml:space="preserve">
         <value>Actions</value>
@@ -142,21 +142,21 @@
         <value>Account Templates</value>
     </data>
     <data name="NO_RECORDS" xml:space="preserve">
-        <value>The UDRC values must span across the entire period of the group subscription's start and end dates.</value>
+        <value>There are no Account Templates on this account.</value>
     </data>
     <data name="PageResource1.Title" xml:space="preserve">
-        <value></value>
+        <value>MetraNet</value>
     </data>
     <data name="TEMPLATE_DESC" xml:space="preserve">
-        <value></value>
+        <value>Template Description</value>
     </data>
     <data name="TEMPLATE_ID" xml:space="preserve">
-        <value></value>
+        <value>Template ID</value>
     </data>
     <data name="TEMPLATE_NAME" xml:space="preserve">
-        <value></value>
+        <value>Template Name</value>
     </data>
     <data name="VIEW_HISTORY" xml:space="preserve">
-        <value>View Details</value>
+        <value>View History</value>
     </data>
 </root>
